tests/ui/issues/issue-17252.stderr
error[E0391]: cycle detected when simplifying constant for the type system `FOO`
  --> $DIR/issue-17252.rs:1:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `FOO`...
  --> $DIR/issue-17252.rs:1:20
   |
LL | const FOO: usize = FOO;
   |                    ^^^
   = note: ...which again requires simplifying constant for the type system `FOO`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when simplifying constant for the type system `main::BAR`
  --> $DIR/issue-17252.rs:6:9
   |
LL |         const BAR: usize = BAR;
   |         ^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `main::BAR`...
  --> $DIR/issue-17252.rs:6:28
   |
LL |         const BAR: usize = BAR;
   |                            ^^^
   = note: ...which again requires simplifying constant for the type system `main::BAR`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
